# maestro

./: .gitignore  AGENTS.md  ARCHITECTURE-OVERVIEW.md  README.md  opencode.json  package-lock.json  package.json
docs/issues/: opencode-support-01-mode-selection.md  opencode-support-02-session-launch.md  opencode-support-03-cli-settings.md  opencode-support-04-documentation.md
docs/specs/: opencode-support-brd.md
maestro-mcp-server/: Cargo.toml
maestro-mcp-server/src/: mcp_protocol.rs  status_reporter.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: claudemd.rs  git.rs  hooks.rs  mcp.rs  mod.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/core/: claude_event.rs  event_bus.rs  hook_config_writer.rs  mcp_config_writer.rs  mod.rs  process_manager.rs  session_manager.rs  status_server.rs  transcript_parser.rs  transcript_watcher.rs  worktree_manager.rs
src-tauri/src/git/: mod.rs  ops.rs  runner.rs
src/components/git/: ActionsModal.tsx  GitSettingsModal.tsx
src/components/icons/: OpenCodeIcon.tsx  index.ts
src/components/orchestrator/: OrchestratorPanel.tsx  PipelineFlowView.tsx  SessionControlRow.tsx
src/components/session/: ActivityFeed.tsx
src/components/shared/: ProjectTabs.tsx  TopBar.tsx
src/components/sidebar/: Sidebar.tsx
src/components/terminal/: CliSettingsModal.tsx  PreLaunchCard.tsx  TerminalGrid.tsx  TerminalHeader.tsx  TerminalView.tsx
src/components/terminal/__tests__/: PreLaunchCard.test.tsx
src/hooks/: useTerminalKeyboard.ts
src/lib/: mcp.ts  terminal.ts  useOpenProject.ts  worktreeManager.ts
src/lib/__tests__/: useOpenProject.test.tsx
src/stores/: useActivityStore.ts  useCliSettingsStore.ts  useFDAStore.ts  useGitStore.ts  usePipelineStore.ts  useSessionStore.ts  useUsageStore.ts  useWorkspaceStore.ts  useWorktreeSettingsStore.ts
src/stores/__tests__/: useWorkspaceStore.reorder.test.ts
src/types/: claude-events.ts
