[package]
name = "maestro-mcp-server"
version = "0.2.1"
edition = "2021"
description = "MCP server for Claude Maestro status reporting"
authors = ["lliWcWill"]

[[bin]]
name = "maestro-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
thiserror = "2"
log = "0.4"

[dev-dependencies]
axum = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
