[package]
name = "maestro"
version = "0.2.3"
description = "Maestro — Multi-session AI orchestrator"
authors = ["lliWcWill"]
edition = "2021"

[lib]
name = "maestro_lib"
crate-type = ["lib"]

[features]
default = ["auto-backend"]
# Automatically select the best backend for the platform
auto-backend = []
# Use VTE parser for terminal state tracking (cross-platform)
vte-backend = ["vte"]
# Force xterm.js passthrough on all platforms
xterm-only = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
libc = "0.2"
dashmap = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
directories = "5"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
# HTTP server for MCP status endpoint
axum = "0.8"
# UUID generation for instance isolation
uuid = { version = "1", features = ["v4"] }
# VT sequence parsing (used by Alacritty)
vte = { version = "0.14", optional = true }
# Cross-platform font detection
font-kit = "0.14"
# Date/time handling for usage tracking
chrono = "0.4"
# Cross-platform credential store access (Keychain, Credential Manager, Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Filesystem watching for transcript tailing
notify = { version = "7", features = ["macos_fsevent"] }

# macOS permissions (Full Disk Access check)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2.1"


[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Note: This crate is part of the root workspace (see ../Cargo.toml)
